--- a/main.css
+++ b/main.css
@@ -38,6 +38,10 @@ nav a:hover {
    background-color: #941706;
    color: #fff;
 }
+.location{
+   background-color: #b9685e;
+   color: white;
+}
 h1 {
    font-size: 300%;
    text-align: center;
@@ -90,8 +94,23 @@ header img{
    margin: 0 auto;
    font-family:Arial, Helvetica, sans-serif;
 }
+.span-half {
+   width: 100%;
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   grid-gap: 2rem;
+}
+.fourths {
+   grid-gap: 0em;
+   justify-items: center;
+
+}
 .container-aside h2 {
    text-align: left;
+}
+.align-left h2 {
+   text-align: left;
+
 }
 .award {
    width: 100%;
@@ -177,10 +196,30 @@ footer {
    margin-left: -.5rem;
    list-style-type: none;
 } 
+.map-span{
+   display: grid;
+   max-width: 100%;
+   grid-gap: 1rem;
+}
+.map-span div:first-child{
+grid-column: 1/2;
+}
+.map-span div:last-child{
+grid-column: 2/3;
+}
+.h .content ul{
+   display:grid;
+   grid-template-rows: 1fr 1fr 1fr;
+   justify-items: center;
+   padding: 0 auto;
+}
+.hours-page ul{
+   font-size: 125%;
 
-
-
-
+}
+.hours-page li{
+   line-height: 1.5em;
+}
 
 
 
