--- a/main.css
+++ b/main.css
@@ -8,6 +8,15 @@
    border-radius: .75rem;
 
 }
+a {
+   text-decoration: none;
+   color:#941706;
+   font-weight: 900;
+}
+img {
+   width: 100%;
+   height: 100%;
+}
 nav ul{
    width: 100%;
    height: 100%;
@@ -33,7 +42,23 @@ nav a {
    list-style-type: none;
    flex-wrap: nowrap;
    font-weight: bold;
+   animation-name: nav-buttons;
+   animation-duration: 1s;
+   animation-delay: .25s;
+   animation-timing-function: ease-out;
+   animation-fill-mode: backwards;
 }
+
+@keyframes nav-buttons{
+   0%{
+      transform: translateX(-25px);
+      opacity: 0;
+   }
+   100%{
+      opacity: 1;
+   }
+}
+
 nav a:hover {
    background-color: #941706;
    color: #fff;
@@ -113,6 +138,7 @@ header img{
 
 }
 .award {
+   padding-top: 1rem;
    width: 100%;
    display: grid;
    grid-template-columns: 8fr 1fr;
@@ -122,7 +148,7 @@ header img{
    font-family:Arial, Helvetica, sans-serif;
 }
 .award img{
-   height: 100%;
+   height: 113px;
    width: auto;
    grid-column: 2/3;
    grid-row: 1/3;
@@ -171,23 +197,7 @@ footer {
    padding: 0 0;
 }
 
-/* .content {
-   width: 100%;
-   display: grid;
-   grid-template-columns: 1fr 1fr;
-   justify-items: center;
-   grid-gap: 1em;
-   background-color: #fff;
-   margin: 0 auto;
-   font-family:Arial, Helvetica, sans-serif;
-}
-.content div{
-   margin: 1rem 0;
-   line-height: 1.25rem;
-   background-color: rgb(211, 223, 241);
-   padding: 1rem;
-   border-radius: .75rem;
-}*/
+
 .content li{
    margin: .5rem .5rem;
    line-height: 1.25rem;
@@ -200,6 +210,10 @@ footer {
    display: grid;
    max-width: 100%;
    grid-gap: 1rem;
+   text-align: center;
+}
+iframe {
+   width: 100%;
 }
 .map-span div:first-child{
 grid-column: 1/2;
@@ -211,22 +225,85 @@ grid-column: 2/3;
    display:grid;
    grid-template-rows: 1fr 1fr 1fr;
    justify-items: center;
+   align-items: center;
    padding: 0 auto;
 }
 .hours-page ul{
    font-size: 125%;
-
 }
 .hours-page li{
    line-height: 1.5em;
 }
+.content img {
+   width: 250px;
+   height: auto;
+}
+.content {
+   padding-right: 1rem;
+}
+.container-aside h3{
+   padding: .25rem 0;
+   color:#000000;
+   font-size: 115%;
+}
+.container-aside li{
+   margin-left: 1em; 
+}
+footer p{
+   color:#6c6c6c;
+   font-size: 90%;
+}
+.food img{
+   border-radius: 1rem;
+   margin-top: .5em;
+}
+.storefront img{
+   max-width: 48%;
+   height: auto; 
+   border-radius: .5em;
+}
 
-
-
-
+.storefront img:last-child{
+   margin-left: 2em;
+}
 
 /* Media Queries
 ------------------------------------*/
+
+@media (min-width: 1220px) {
+   .wrapper {
+      width: 65vw;
+      border: none;
+      padding:0 2rem; 
+      background-color: white;
+   }
+   body {
+      background: linear-gradient(white, #e5dbd2 75%);
+   }
+   footer{
+      background-color: white;
+   }
+   iframe {
+      width: 100%;
+   }
+   .container-aside {
+      display: grid;
+   }
+   }
+@media (max-width: 1400px) {
+   .wrapper {
+      width: 70vw;
+   }
+   }
+
+@media (max-width: 1220px) {
+   .wrapper {
+      width: 100vw;
+      border: none;
+      padding:0 2rem; 
+   }
+   }
+
 
 @media (max-width: 959px) {
 .wrapper {
@@ -234,4 +311,9 @@ grid-column: 2/3;
    border: none;
    padding:0 2rem; 
 }
+nav a {
+   display: flex;
+   flex-direction: row;
+}
+
 }
