--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ nav a {
    /* background-color: rgba(182, 182, 182, 0.46); */
    padding: .5rem 1rem;
    border-radius: .75rem;
-   /* border: 1px solid #3e3e3e; */
+   border: 1px solid #3e3e3e;
    width: 100%;
    display: flex;
    flex-direction: row;
@@ -224,10 +224,12 @@ grid-column: 2/3;
 }
 .h .content ul{
    display:grid;
-   grid-template-rows: 1fr 1fr 1fr;
+   grid-template-columns: 1fr 1fr 1fr;
    justify-items: center;
    align-items: center;
    padding: 0 auto;
+   padding-bottom: 1em;
+   border-bottom: 1px solid black;
 }
 .hours-page ul{
    font-size: 125%;
@@ -259,16 +261,14 @@ footer p{
    margin-top: .5em;
 }
 .storefront img{
-   max-width: 48%;
+   max-width: 100%;
    height: auto; 
    border-radius: .5em;
 }
 
-.storefront img:last-child{
-   margin-left: 2em;
-}
-
-
+.item-price {
+   text-align: right;
+ }
 
 
 
@@ -307,45 +307,12 @@ footer p{
    .container-aside {
       display: grid;
    }
-   .hours p{
-      display: none;
-   }
-   .hours {
-      display: grid;
-      position:fixed;
-      top: 40vh;
-      left: 20px;
-      background-color: white;
-      height: 20rem;
-      width: 15rem;
-      grid-template-columns: 1fr;
-      border: none;
-      border-radius: 1rem;
-      text-align: center;
-      }
-   .hours ul{
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-   }
-   .hours li{
-      margin:0 0rem ;
-      line-height: 1.5rem;
-      /* list-style-type: none; */
-   }
-   .hours li:last-child{
-      display: flex;
-      text-align: center;
-      margin: 0 auto;
-   }
-   .hours h2{
-      text-align:center;
-      margin: 0 0;
-      padding: 0 0;
-      margin-bottom: -2rem;
-   }
+
    .desktop-footer {
       display: flex;
+   }
+   .hours {
+      padding: 1em 0 2em 0;
    }
    }
 
